HW6 压缩矩阵的转置运算

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,5 @@ add_executable(henuDataStructureHW
         HW2.cpp
         HW3.cpp
         HW4.cpp
-        HW5.cpp)
+        HW5.cpp
+        HW6.cpp)
